[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "content-reference-toolkit"
version = "0.1.0"
description = "Local tooling to collect social content references for guideline analysis."
requires-python = ">=3.11"
dependencies = ["rapidfuzz>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]
extract = ["faster-whisper>=1.0", "easyocr>=1.7", "scenedetect>=0.6"]

[project.scripts]
content-reference = "content_reference_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
